--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "drupal/helfi_azure_fs": "^1.0",
         "drupal/helfi_drupal_tools": "dev-main",
         "drupal/helfi_platform_config": "2.8.0",
+        "drupal/helfi_tunnistamo": "2.0.7",
         "drush/drush": "^10.4"
     },
     "require-dev": {
