--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
         "drupal/core-composer-scaffold": "^9.3",
         "drupal/core-recommended": "^9.3",
         "drupal/eu_cookie_compliance": "1.19",
-        "drupal/hdbt": "2.3.22",
-        "drupal/hdbt_admin": "1.6.2",
-        "drupal/helfi_api_base": "2.2.1",
+        "drupal/hdbt": "4.0.0",
+        "drupal/hdbt_admin": "1.6.11",
+        "drupal/helfi_api_base": "2.3.1",
         "drupal/helfi_azure_fs": "^1.0",
         "drupal/helfi_drupal_tools": "dev-main",
-        "drupal/helfi_platform_config": "2.8.0",
+        "drupal/helfi_platform_config": "2.12.2",
         "drupal/helfi_tunnistamo": "2.0.7",
+        "drupal/views_bulk_edit": "2.6",
         "drush/drush": "^10.4"
     },
     "require-dev": {
