--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         "cweagans/composer-patches": "^1.6.7",
         "drupal/core-composer-scaffold": "^9.3",
         "drupal/core-recommended": "^9.3",
-        "drupal/eu_cookie_compliance": "1.19",
-        "drupal/hdbt": "4.0.0",
+        "drupal/eu_cookie_compliance": "^1.24",
+        "drupal/hdbt": "4.3.0",
         "drupal/hdbt_admin": "1.6.11",
         "drupal/helfi_api_base": "2.3.1",
         "drupal/helfi_azure_fs": "^1.0",
         "drupal/helfi_drupal_tools": "dev-main",
-        "drupal/helfi_platform_config": "2.12.3",
+        "drupal/helfi_platform_config": "2.13.16",
         "drupal/helfi_tpr": "2.1.2",
         "drupal/helfi_tunnistamo": "2.0.7",
         "drush/drush": "^10.4"
