Config export after updates, enable helfi_news_feed module.

--- a/conf/cmi/user.role.content_producer.yml
+++ b/conf/cmi/user.role.content_producer.yml
@@ -115,3 +115,10 @@ permissions:
   - 'update own tpr_unit'
   - 'view all tpr_service revisions'
   - 'view all tpr_unit revisions'
+  - 'create news_item content'
+  - 'delete own news_item content'
+  - 'edit any news_item content'
+  - 'edit own news_item content'
+  - 'revert news_item revisions'
+  - 'set news_item published on date'
+  - 'view news_item revisions'
