--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -28,6 +28,7 @@ module:
   entity: 0
   entity_reference_revisions: 0
   entity_usage: 0
+  external_entities: 0
   field: 0
   field_group: 0
   field_ui: 0
@@ -49,6 +50,8 @@ module:
   helfi_gdpr_compliance: 0
   helfi_languages: 0
   helfi_media: 0
+  helfi_news_feed: 0
+  helfi_news_item: 0
   helfi_platform_config: 0
   helfi_toc: 0
   helfi_tpr: 0
@@ -111,6 +114,7 @@ module:
   content_translation: 10
   views: 10
   paragraphs: 11
+  publication_date: 99
   minimal: 1000
   eu_cookie_compliance: 1001
 theme:
