--- a/conf/cmi/field.field.tpr_service.tpr_service.field_lower_content.yml
+++ b/conf/cmi/field.field.tpr_service.tpr_service.field_lower_content.yml
@@ -8,10 +8,12 @@ dependencies:
     - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.columns
     - paragraphs.paragraphs_type.content_cards
+    - paragraphs.paragraphs_type.event_list
     - paragraphs.paragraphs_type.from_library
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.liftup_with_image
     - paragraphs.paragraphs_type.list_of_links
+    - paragraphs.paragraphs_type.news_list
     - paragraphs.paragraphs_type.phasing
     - paragraphs.paragraphs_type.remote_video
   module:
@@ -23,7 +25,7 @@ id: tpr_service.tpr_service.field_lower_content
 field_name: field_lower_content
 entity_type: tpr_service
 bundle: tpr_service
-label: 'Lower content region'
+label: 'Alempi sisältöalue'
 description: ''
 required: false
 translatable: true
@@ -43,6 +45,8 @@ settings:
       from_library: from_library
       phasing: phasing
       remote_video: remote_video
+      event_list: event_list
+      news_list: news_list
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -59,6 +63,9 @@ settings:
         enabled: true
       content_cards:
         weight: -23
+        enabled: true
+      event_list:
+        weight: 44
         enabled: true
       from_library:
         weight: 21
@@ -84,6 +91,9 @@ settings:
       list_of_links_item:
         weight: -17
         enabled: false
+      news_list:
+        weight: 30
+        enabled: true
       phasing:
         weight: 50
         enabled: true
