--- a/conf/cmi/field.field.tpr_unit.tpr_unit.field_lower_content.yml
+++ b/conf/cmi/field.field.tpr_unit.tpr_unit.field_lower_content.yml
@@ -7,11 +7,14 @@ dependencies:
     - paragraphs.paragraphs_type.accordion
     - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.columns
+    - paragraphs.paragraphs_type.contact_card_listing
     - paragraphs.paragraphs_type.content_cards
+    - paragraphs.paragraphs_type.event_list
     - paragraphs.paragraphs_type.from_library
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.liftup_with_image
     - paragraphs.paragraphs_type.list_of_links
+    - paragraphs.paragraphs_type.news_list
     - paragraphs.paragraphs_type.remote_video
   module:
     - entity_reference_revisions
@@ -22,7 +25,7 @@ id: tpr_unit.tpr_unit.field_lower_content
 field_name: field_lower_content
 entity_type: tpr_unit
 bundle: tpr_unit
-label: 'Lower content region'
+label: 'Alempi sisältöalue'
 description: ''
 required: false
 translatable: true
@@ -42,6 +45,8 @@ settings:
       from_library: from_library
       remote_video: remote_video
       contact_card_listing: contact_card_listing
+      event_list: event_list
+      news_list: news_list
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -64,6 +69,9 @@ settings:
         enabled: true
       content_cards:
         weight: -23
+        enabled: true
+      event_list:
+        weight: 44
         enabled: true
       from_library:
         weight: 21
@@ -89,6 +97,9 @@ settings:
       list_of_links_item:
         weight: -17
         enabled: false
+      news_list:
+        weight: 30
+        enabled: true
       remote_video:
         weight: 32
         enabled: true
