--- a/conf/cmi/user.role.admin.yml
+++ b/conf/cmi/user.role.admin.yml
@@ -189,3 +189,17 @@ permissions:
   - 'view unpublished tpr_service'
   - 'view unpublished tpr_service_channel'
   - 'view unpublished tpr_unit'
+  - 'create news_item content'
+  - 'create terms in news_tags'
+  - 'delete any news_item content'
+  - 'delete news_item revisions'
+  - 'delete own news_item content'
+  - 'delete terms in news_tags'
+  - 'edit any news_item content'
+  - 'edit own news_item content'
+  - 'edit terms in news_tags'
+  - 'revert news_item revisions'
+  - 'set news_item published on date'
+  - 'translate news_item node'
+  - 'translate news_tags taxonomy_term'
+  - 'view news_item revisions'
