--- a/conf/cmi/user.role.editor.yml
+++ b/conf/cmi/user.role.editor.yml
@@ -157,3 +157,14 @@ permissions:
   - 'view unpublished tpr_service'
   - 'view unpublished tpr_service_channel'
   - 'view unpublished tpr_unit'
+  - 'create news_item content'
+  - 'delete any news_item content'
+  - 'delete news_item revisions'
+  - 'delete own news_item content'
+  - 'edit any news_item content'
+  - 'edit own news_item content'
+  - 'revert news_item revisions'
+  - 'set news_item published on date'
+  - 'translate news_item node'
+  - 'translate news_tags taxonomy_term'
+  - 'view news_item revisions'
