--- a/conf/cmi/user.role.anonymous.yml
+++ b/conf/cmi/user.role.anonymous.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   module:
     - eu_cookie_compliance
+    - helfi_api_base
+    - helfi_tpr
     - media
     - system
 _core:
   default_config_hash: j5zLMOdJBqC0bMvSdth5UebkprJB8g_2FXHqhfpJzow
 id: anonymous
-label: 'Anonymous user'
+label: 'Anonyymi käyttäjä'
 weight: 0
 is_admin: false
 permissions:
@@ -17,3 +19,6 @@ permissions:
   - 'display eu cookie compliance popup'
   - 'view media'
   - 'view remote entities'
+  - 'view tpr_ontology_word_details'
+  - 'view tpr_service'
+  - 'view tpr_unit'
