--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -4,17 +4,23 @@ status: true
 dependencies:
   module:
     - eu_cookie_compliance
+    - helfi_api_base
+    - helfi_tpr
     - media
     - system
+    - toolbar
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
 id: authenticated
-label: 'Authenticated user'
+label: 'Sisäänkirjautunut käyttäjä'
 weight: 1
 is_admin: false
 permissions:
   - 'access content'
+  - 'access toolbar'
   - 'display eu cookie compliance popup'
   - 'view media'
-  - 'access toolbar'
   - 'view remote entities'
+  - 'view tpr_ontology_word_details'
+  - 'view tpr_service'
+  - 'view tpr_unit'
