--- a/conf/cmi/user.role.content_producer.yml
+++ b/conf/cmi/user.role.content_producer.yml
@@ -11,6 +11,7 @@ dependencies:
     - media.type.remote_video
     - media.type.soundcloud
     - node.type.landing_page
+    - node.type.news_item
     - node.type.page
     - taxonomy.vocabulary.keywords
   module:
@@ -19,11 +20,13 @@ dependencies:
     - file
     - filter
     - helfi_api_base
+    - helfi_tpr
     - media
     - node
     - paragraphs
     - paragraphs_library
     - path
+    - publication_date
     - scheduler
     - system
     - taxonomy
@@ -42,6 +45,8 @@ permissions:
   - 'access remote entities overview'
   - 'access taxonomy overview'
   - 'access toolbar'
+  - 'access tpr_service overview'
+  - 'access tpr_unit overview'
   - 'access user profiles'
   - 'administer nodes'
   - 'administer paragraphs library'
@@ -52,6 +57,7 @@ permissions:
   - 'create image media'
   - 'create landing_page content'
   - 'create media'
+  - 'create news_item content'
   - 'create page content'
   - 'create paragraph library item'
   - 'create remote_video media'
@@ -63,6 +69,7 @@ permissions:
   - 'delete own helfi_chart media'
   - 'delete own image media'
   - 'delete own landing_page content'
+  - 'delete own news_item content'
   - 'delete own page content'
   - 'delete own remote_video media'
   - 'delete own soundcloud media'
@@ -70,6 +77,7 @@ permissions:
   - 'edit any helfi_chart media'
   - 'edit any image media'
   - 'edit any landing_page content'
+  - 'edit any news_item content'
   - 'edit any page content'
   - 'edit any remote_video media'
   - 'edit any soundcloud media'
@@ -77,25 +85,35 @@ permissions:
   - 'edit own helfi_chart media'
   - 'edit own image media'
   - 'edit own landing_page content'
+  - 'edit own news_item content'
   - 'edit own page content'
   - 'edit own remote_video media'
   - 'edit own soundcloud media'
   - 'edit paragraph library item'
   - 'edit terms in keywords'
   - 'revert landing_page revisions'
+  - 'revert news_item revisions'
   - 'revert page revisions'
   - 'schedule publishing of nodes'
   - 'set landing_page published on date'
+  - 'set news_item published on date'
   - 'set page published on date'
   - 'translate editable entities'
+  - 'update any tpr_service'
+  - 'update any tpr_unit'
   - 'update media'
+  - 'update own tpr_service'
+  - 'update own tpr_unit'
   - 'use text format full_html'
   - 'use text format minimal'
   - 'view all media revisions'
   - 'view all revisions'
+  - 'view all tpr_service revisions'
+  - 'view all tpr_unit revisions'
   - 'view any unpublished content'
   - 'view editoria11y checker'
   - 'view landing_page revisions'
+  - 'view news_item revisions'
   - 'view own unpublished content'
   - 'view own unpublished media'
   - 'view page revisions'
@@ -103,22 +121,7 @@ permissions:
   - 'view scheduled content'
   - 'view the administration theme'
   - 'view unpublished paragraphs'
-  - 'access tpr_service overview'
-  - 'access tpr_unit overview'
   - 'view unpublished tpr_errand_service'
   - 'view unpublished tpr_service'
   - 'view unpublished tpr_service_channel'
   - 'view unpublished tpr_unit'
-  - 'update any tpr_service'
-  - 'update any tpr_unit'
-  - 'update own tpr_service'
-  - 'update own tpr_unit'
-  - 'view all tpr_service revisions'
-  - 'view all tpr_unit revisions'
-  - 'create news_item content'
-  - 'delete own news_item content'
-  - 'edit any news_item content'
-  - 'edit own news_item content'
-  - 'revert news_item revisions'
-  - 'set news_item published on date'
-  - 'view news_item revisions'
