--- a/conf/cmi/user.role.editor.yml
+++ b/conf/cmi/user.role.editor.yml
@@ -11,14 +11,17 @@ dependencies:
     - media.type.remote_video
     - media.type.soundcloud
     - node.type.landing_page
+    - node.type.news_item
     - node.type.page
     - taxonomy.vocabulary.keywords
+    - taxonomy.vocabulary.news_tags
   module:
     - content_translation
     - editoria11y
     - file
     - filter
     - helfi_api_base
+    - helfi_tpr
     - locale
     - media
     - menu_link_attributes
@@ -27,6 +30,7 @@ dependencies:
     - paragraphs
     - paragraphs_library
     - path
+    - publication_date
     - redirect
     - scheduler
     - system
@@ -47,6 +51,8 @@ permissions:
   - 'access remote entities overview'
   - 'access taxonomy overview'
   - 'access toolbar'
+  - 'access tpr_service overview'
+  - 'access tpr_unit overview'
   - 'access user profiles'
   - 'administer menu'
   - 'administer nodes'
@@ -61,6 +67,7 @@ permissions:
   - 'create image media'
   - 'create landing_page content'
   - 'create media'
+  - 'create news_item content'
   - 'create page content'
   - 'create paragraph library item'
   - 'create remote entities'
@@ -73,16 +80,19 @@ permissions:
   - 'delete any image media'
   - 'delete any landing_page content'
   - 'delete any media'
+  - 'delete any news_item content'
   - 'delete any page content'
   - 'delete any remote_video media'
   - 'delete any soundcloud media'
   - 'delete content translations'
   - 'delete landing_page revisions'
   - 'delete media'
+  - 'delete news_item revisions'
   - 'delete own file media'
   - 'delete own helfi_chart media'
   - 'delete own image media'
   - 'delete own landing_page content'
+  - 'delete own news_item content'
   - 'delete own page content'
   - 'delete own remote_video media'
   - 'delete own soundcloud media'
@@ -93,6 +103,7 @@ permissions:
   - 'edit any helfi_chart media'
   - 'edit any image media'
   - 'edit any landing_page content'
+  - 'edit any news_item content'
   - 'edit any page content'
   - 'edit any remote_video media'
   - 'edit any soundcloud media'
@@ -100,16 +111,21 @@ permissions:
   - 'edit own helfi_chart media'
   - 'edit own image media'
   - 'edit own landing_page content'
+  - 'edit own news_item content'
   - 'edit own page content'
   - 'edit own remote_video media'
   - 'edit own soundcloud media'
   - 'edit paragraph library item'
   - 'edit remote entities'
   - 'edit terms in keywords'
+  - 'revert all tpr_service revisions'
+  - 'revert all tpr_unit revisions'
   - 'revert landing_page revisions'
+  - 'revert news_item revisions'
   - 'revert page revisions'
   - 'schedule publishing of nodes'
   - 'set landing_page published on date'
+  - 'set news_item published on date'
   - 'set page published on date'
   - 'translate any entity'
   - 'translate editable entities'
@@ -119,52 +135,40 @@ permissions:
   - 'translate keywords taxonomy_term'
   - 'translate landing_page node'
   - 'translate menu_link_content'
+  - 'translate news_item node'
+  - 'translate news_tags taxonomy_term'
   - 'translate page node'
   - 'translate remote_video media'
   - 'translate soundcloud media'
+  - 'translate tpr_errand_service'
+  - 'translate tpr_service'
+  - 'translate tpr_service_channel'
+  - 'translate tpr_unit'
   - 'update any media'
+  - 'update any tpr_service'
+  - 'update any tpr_unit'
   - 'update content translations'
   - 'update media'
+  - 'update own tpr_service'
+  - 'update own tpr_unit'
   - 'use menu link attributes'
   - 'use text format full_html'
   - 'use text format minimal'
   - 'view all media revisions'
   - 'view all revisions'
+  - 'view all tpr_service revisions'
+  - 'view all tpr_unit revisions'
   - 'view any unpublished content'
   - 'view editoria11y checker'
   - 'view landing_page revisions'
+  - 'view news_item revisions'
   - 'view own unpublished content'
   - 'view own unpublished media'
   - 'view page revisions'
   - 'view scheduled content'
   - 'view the administration theme'
   - 'view unpublished paragraphs'
-  - 'access tpr_service overview'
-  - 'access tpr_unit overview'
-  - 'revert all tpr_service revisions'
-  - 'revert all tpr_unit revisions'
-  - 'translate tpr_errand_service'
-  - 'translate tpr_service'
-  - 'translate tpr_service_channel'
-  - 'translate tpr_unit'
-  - 'update any tpr_service'
-  - 'update any tpr_unit'
-  - 'update own tpr_service'
-  - 'update own tpr_unit'
-  - 'view all tpr_service revisions'
-  - 'view all tpr_unit revisions'
   - 'view unpublished tpr_errand_service'
   - 'view unpublished tpr_service'
   - 'view unpublished tpr_service_channel'
   - 'view unpublished tpr_unit'
-  - 'create news_item content'
-  - 'delete any news_item content'
-  - 'delete news_item revisions'
-  - 'delete own news_item content'
-  - 'edit any news_item content'
-  - 'edit own news_item content'
-  - 'revert news_item revisions'
-  - 'set news_item published on date'
-  - 'translate news_item node'
-  - 'translate news_tags taxonomy_term'
-  - 'view news_item revisions'
