--- a/conf/cmi/user.role.read_only.yml
+++ b/conf/cmi/user.role.read_only.yml
@@ -3,21 +3,23 @@ langcode: en
 status: true
 dependencies:
   module:
+    - helfi_tpr
     - paragraphs
     - toolbar
+    - view_unpublished
 _core:
   default_config_hash: syTv0h1MUcZ35TjmApRsR9znnDRN-fk-wxfZjABkkbw
 id: read_only
-label: 'Read only'
+label: Lukija
 weight: 2
 is_admin: null
 permissions:
   - 'access toolbar'
   - 'view any unpublished landing_page content'
+  - 'view any unpublished news_item content'
   - 'view any unpublished page content'
   - 'view unpublished paragraphs'
   - 'view unpublished tpr_errand_service'
   - 'view unpublished tpr_service'
   - 'view unpublished tpr_service_channel'
   - 'view unpublished tpr_unit'
-  - 'view any unpublished news_item content'
