--- a/conf/cmi/easy_breadcrumb.settings.yml
+++ b/conf/cmi/easy_breadcrumb.settings.yml
@@ -5,7 +5,7 @@ include_invalid_paths: false
 excluded_paths: ''
 replaced_titles: ''
 custom_paths: ''
-include_home_segment: false
+include_home_segment: true
 alternative_title_field: field_breadcrumb_title
 home_segment_title: Home
 home_segment_keep: false
@@ -14,6 +14,7 @@ title_from_page_when_available: true
 title_segment_as_link: false
 use_menu_title_as_fallback: false
 use_page_title_as_menu_title_fallback: false
+menu_title_preferred_menu: ''
 remove_repeated_segments: true
 language_path_prefix_as_segment: false
 absolute_paths: false
@@ -28,7 +29,9 @@ capitalizator_forced_words_case_sensitivity: true
 capitalizator_forced_words_first_letter: false
 follow_redirects: true
 limit_segment_display: false
-segment_display_limit: ''
+segment_display_limit: null
 truncator_mode: false
 truncator_length: 100
 truncator_dots: true
+remove_repeated_segments_text_only: 0
+home_segment_validation_skip: 0
