--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "drupal/eu_cookie_compliance": "^1.24",
         "drupal/hdbt": "4.3.7",
         "drupal/hdbt_admin": "1.8.4",
+        "drupal/health_check": "^2.0",
         "drupal/helfi_api_base": "2.3.6",
         "drupal/helfi_azure_fs": "^1.0",
         "drupal/helfi_drupal_tools": "dev-main",
