--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -41,6 +41,7 @@ module:
   hdbt_admin_tools: 0
   hdbt_component_library: 0
   hdbt_content: 0
+  health_check: 0
   helfi_api_base: 0
   helfi_base_config: 0
   helfi_charts: 0
