Add Matomo script for Palvelukeskus.

--- a/public/themes/custom/hdbt_subtheme/hdbt_subtheme.info.yml
+++ b/public/themes/custom/hdbt_subtheme/hdbt_subtheme.info.yml
@@ -29,3 +29,6 @@ regions:
 libraries:
   - hdbt_subtheme/global-styling
   - hdbt_subtheme/global-scripting
+
+libraries-override:
+  hdbt/matomo: hdbt_subtheme/matomo
