--- a/public/themes/custom/hdbt_subtheme/hdbt_subtheme.libraries.yml
+++ b/public/themes/custom/hdbt_subtheme/hdbt_subtheme.libraries.yml
@@ -8,6 +8,11 @@ global-styling:
 global-scripting:
   version: 1.x
   js:
-    dist/js/bundle.min.js: {}
+    dist/js/common.min.js: {}
   dependencies:
     - core/drupal
+
+matomo:
+  version: 1.x
+  js:
+    dist/js/matomo.min.js: {}
