--- a/.github/workflows/update-config.yml.dist
+++ b/.github/workflows/update-config.yml.dist
@@ -11,11 +11,16 @@ jobs:
   update-config:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/city-of-helsinki/drupal-php-docker:8.0-alpine
+      image: ghcr.io/city-of-helsinki/drupal-php-docker:8.1-alpine
 
     services:
       db:
-        image: druidfi/db:mysql5.7-drupal
+        image: mariadb
+        env:
+          MYSQL_USER: drupal
+          MYSQL_PASSWORD: drupal
+          MYSQL_DATABASE: drupal
+          MYSQL_ROOT_PASSWORD: drupal
         ports:
           - 3306:3306
 
@@ -36,18 +41,18 @@ jobs:
           $(drush sql:connect) < latest.sql
           drush cr && drush cim -y
           composer update drupal/helfi_* drupal/hdbt* -W
-          drush updb -y
-          drush cex -y
+          drush cr && drush updb -y && drush cex -y
           # Update platform
           drush helfi:tools:update-platform
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v4
         with:
           committer: GitHub <noreply@github.com>
           author: actions-bot <actions-bot@users.noreply.github.com>
           commit-message: Update configuration
           title: Automatic update
+          labels: auto-update
           body: |
             - Updated active configuration.
             - Updated platform
