--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,10 @@ public/sites/simpletest/
 
 # Ignore the folder created by PhpStorm
 .idea/*
+public/sites/default/local.settings.php
 
 *.sql
-.env.local
+*.env.local
 
 # Ignore OSX generated files
 ._*
@@ -23,3 +24,4 @@ public/sites/simpletest/
 
 !*.gitkeep
 !*.keepme
+.phpunit.*
