--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 
 # Docker Compose project name
 COMPOSE_PROJECT_NAME=drupal-palvelukeskus
+PROJECT_NAME=helfi-palvelukeskus
 
 # OpenShift project name
 OC_PROJECT_NAME=
