Update env files and add OpenShift project name.

--- a/.env
+++ b/.env
@@ -7,20 +7,23 @@ COMPOSE_PROJECT_NAME=drupal-palvelukeskus
 PROJECT_NAME=helfi-palvelukeskus
 
 # OpenShift project name
-OC_PROJECT_NAME=
+OC_PROJECT_NAME=hki-kanslia-helfi-palvelukeskus-test
 
 # Stage file proxy origin url and folder
-STAGE_FILE_PROXY_ORIGIN=
+STAGE_FILE_PROXY_ORIGIN=https://helfisote.blob.core.windows.net
 STAGE_FILE_PROXY_ORIGIN_DIR=
 
 # Local hostname
 DRUPAL_HOSTNAME=drupal-palvelukeskus.docker.so
 
 # Docker image
-DRUPAL_IMAGE=ghcr.io/city-of-helsinki/drupal-web:8.0
+DRUPAL_IMAGE=ghcr.io/city-of-helsinki/drupal-web:8.1
 
 # Default source @alias where to sync database and files from
 DRUPAL_SYNC_SOURCE=main
 
 # Public webroot
 DRUPAL_WEBROOT=public
+
+# Don't sync files for now
+DRUPAL_SYNC_FILES=no
