--- a/conf/cmi/core.entity_form_display.paragraph.popular_services.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.popular_services.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.popular_services.field_popular_services_title
     - field.field.paragraph.popular_services.field_service_items
     - paragraphs.paragraphs_type.popular_services
   module:
@@ -16,11 +17,11 @@ mode: default
 content:
   field_service_items:
     type: paragraphs
-    weight: 0
+    weight: 1
     region: content
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
+      title: Lohko
+      title_plural: Lohkot
       edit_mode: open
       closed_mode: summary
       autocollapse: none
@@ -32,6 +33,15 @@ content:
         collapse_edit_all: collapse_edit_all
         duplicate: duplicate
     third_party_settings: {  }
+  field_popular_services_title:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
   created: true
+  field_popular_services_title: true
   status: true
