--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -33,6 +33,7 @@ module:
   field_group: 0
   field_ui: 0
   file: 0
+  file_mdm: 0
   filelog: 0
   filter: 0
   focal_point: 0
@@ -47,26 +48,26 @@ module:
   helfi_charts: 0
   helfi_contact_cards: 0
   helfi_content: 0
-  helfi_events: 0
   helfi_gdpr_compliance: 0
   helfi_languages: 0
   helfi_media: 0
   helfi_news_feed: 0
   helfi_news_item: 0
   helfi_platform_config: 0
+  helfi_react_search: 0
   helfi_toc: 0
   helfi_tpr: 0
   helfi_tpr_config: 0
   image: 0
   image_style_quality: 0
   imagecache_external: 0
+  imagemagick: 0
   language: 0
   link: 0
   linkit: 0
   locale: 0
   media: 0
   media_entity_file_replace: 0
-  media_entity_soundcloud: 0
   media_library: 0
   menu_block_current_language: 0
   menu_link_attributes: 0
@@ -99,12 +100,12 @@ module:
   select2_icon: 0
   simple_sitemap: 0
   social_media: 0
+  sophron: 0
   system: 0
   taxonomy: 0
   telephone: 0
   text: 0
   token: 0
-  token_filter: 0
   toolbar: 0
   translatable_menu_link_uri: 0
   twig_tweak: 0
@@ -116,7 +117,6 @@ module:
   view_unpublished: 0
   views_bulk_edit: 0
   views_bulk_operations: 0
-  views_infinite_scroll: 0
   views_ui: 0
   pathauto: 1
   content_translation: 10
