--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         "drupal/core-recommended": "^9.3",
         "drupal/eu_cookie_compliance": "^1.24",
         "drupal/hdbt": "4.0.7",
-        "drupal/hdbt_admin": "1.8.4",
+        "drupal/hdbt_admin": "^1.8.6",
         "drupal/health_check": "^3.0",
         "drupal/helfi_api_base": "2.4.0",
         "drupal/helfi_azure_fs": "^1.0",
         "drupal/helfi_drupal_tools": "dev-main",
         "drupal/helfi_platform_config": "2.18.5",
         "drupal/helfi_proxy": "^2.0",
-        "drupal/helfi_tpr": "2.1.2",
+        "drupal/helfi_tpr": "^2.1",
         "drupal/helfi_tunnistamo": "2.0.7",
         "drush/drush": "^10.4"
     },
