--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/helfi_proxy": "^2.0",
         "drupal/helfi_tpr": "^2.1",
         "drupal/helfi_tunnistamo": "2.0.7",
+        "drupal/linkit": "6.0.0-beta4",
         "drush/drush": "^10.4"
     },
     "require-dev": {
