--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,20 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "composer/installers": "^1.9",
+        "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.6.7",
-        "drupal/core-composer-scaffold": "^9.3",
-        "drupal/core-recommended": "^9.3",
-        "drupal/eu_cookie_compliance": "^1.24",
-        "drupal/hdbt": "4.0.7",
+        "drupal/core": "^9.4",
+        "drupal/core-composer-scaffold": "^9.4",
+        "drupal/hdbt": "^4.0.7",
         "drupal/hdbt_admin": "^1.8.6",
-        "drupal/health_check": "^3.0",
-        "drupal/helfi_api_base": "2.4.0",
-        "drupal/helfi_azure_fs": "^1.0",
+        "drupal/helfi_azure_fs": "^1.1",
         "drupal/helfi_drupal_tools": "dev-main",
-        "drupal/helfi_platform_config": "2.18.5",
+        "drupal/helfi_platform_config": "^2.0",
         "drupal/helfi_proxy": "^2.0",
-        "drupal/helfi_tpr": "^2.1",
-        "drupal/helfi_tunnistamo": "2.0.7",
-        "drupal/linkit": "6.0.0-beta4",
+        "drupal/helfi_tunnistamo": "^2.0",
+        "drupal/raven": "^4.0",
+        "drupal/redis": "^1.5",
+        "drupal/stage_file_proxy": "^1.2",
         "drush/drush": "^10.4"
     },
     "require-dev": {
@@ -47,7 +45,8 @@
             "phpstan/extension-installer": true,
             "composer/installers": true,
             "cweagans/composer-patches": true,
-            "drupal/core-composer-scaffold": true
+            "drupal/core-composer-scaffold": true,
+            "php-http/discovery": true
         }
     },
     "extra": {
