--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "drupal/hdbt_admin": "^2.0",
         "drupal/helfi_azure_fs": "^1.1",
         "drupal/helfi_drupal_tools": "dev-main",
-        "drupal/helfi_platform_config": "3.x-dev",
+        "drupal/helfi_platform_config": "^3.0",
         "drupal/helfi_proxy": "^2.0",
         "drupal/helfi_tunnistamo": "^2.0",
         "drupal/stage_file_proxy": "^1.2",
