--- a/conf/cmi/external_entities.external_entity_type.helfi_news_groups.yml
+++ b/conf/cmi/external_entities.external_entity_type.helfi_news_groups.yml
@@ -3,11 +3,12 @@ langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: XSm-lbRmOWP_eJRFTo14HMiNtxsc5scm42lmq8Qjcy8
+  default_config_hash: zCk_D7oSjREqCU2vFZI4uyGywY_PFNicpUIFuWxtawA
 id: helfi_news_groups
 label: 'Helfi: News groups'
 label_plural: 'Helfi: News groups'
 description: 'Retrieves news groups taxonomy terms from Helfi'
+generate_aliases: null
 read_only: true
 field_mapper_id: jsonpath
 field_mapper_config:
