--- a/conf/cmi/external_entities.external_entity_type.helfi_news_neighbourhoods.yml
+++ b/conf/cmi/external_entities.external_entity_type.helfi_news_neighbourhoods.yml
@@ -3,11 +3,12 @@ langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: h4y6pjlsSfKM9cgEi9tWGsJ57_zj1b4CelECji9A1Y0
+  default_config_hash: p1queceC0XdJdYY5diRNVw-hdAFymgdpq7fhQudsddE
 id: helfi_news_neighbourhoods
 label: 'Helfi: News neighbourhoods'
 label_plural: 'Helfi: News neighbourhoods'
 description: 'Retrieves news neighbourhoods taxonomy terms from Helfi'
+generate_aliases: null
 read_only: true
 field_mapper_id: jsonpath
 field_mapper_config:
