--- a/conf/cmi/external_entities.external_entity_type.helfi_news_tags.yml
+++ b/conf/cmi/external_entities.external_entity_type.helfi_news_tags.yml
@@ -3,11 +3,12 @@ langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: wkWXjXpGr6lPWM3nZ-8RqlBCt7nsAuHiP7EC1Vh4oMc
+  default_config_hash: OdJNKJELJhbOjN4qCgGAHw_Ypudx5Kt3NqcwLn2qbx0
 id: helfi_news_tags
 label: 'Helfi: News tags'
 label_plural: 'Helfi: News tags'
 description: 'Retrieves news tags taxonomy terms from Helfi'
+generate_aliases: null
 read_only: true
 field_mapper_id: jsonpath
 field_mapper_config:
