--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ PROJECT_NAME=helfi-palvelukeskus
 OC_PROJECT_NAME=hki-kanslia-helfi-palvelukeskus-test
 
 # Stage file proxy origin url and folder
-STAGE_FILE_PROXY_ORIGIN=https://helfisote.blob.core.windows.net
-STAGE_FILE_PROXY_ORIGIN_DIR=
+STAGE_FILE_PROXY_ORIGIN=https://palvelukeskus.hel.fi
+STAGE_FILE_PROXY_ORIGIN_DIR=sites/default/files
 
 # Local hostname
 DRUPAL_HOSTNAME=drupal-palvelukeskus.docker.so
