--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "drupal/helfi_platform_config": "^2.0",
         "drupal/helfi_proxy": "^2.0",
         "drupal/helfi_tunnistamo": "^2.0",
+        "drupal/stage_file_proxy": "^1.2",
         "drush/drush": "^10.4"
     },
     "require-dev": {
