UHF-8539: Update config ignore settings to be in line with other sites.

--- a/conf/cmi/config_ignore.settings.yml
+++ b/conf/cmi/config_ignore.settings.yml
@@ -2,4 +2,5 @@ ignored_config_entities:
   - 'system.site:page.front'
   - 'hdbt_admin_tools.site_settings:site_settings'
   - 'easy_breadcrumb.settings:home_segment_title'
-  - hdbt_admin_tools.site_settings
+  - 'hdbt_admin_tools.site_settings:footer_settings'
+  - 'easy_breadcrumb.settings:home_segment_title'
